--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
 
 <head>
-    <title>My First HTML Task</title>
+    <title>
+        My First HTML Task
+    </title>
 </head>
 
 <body>
-    <h1>Anurag Kolluru</h1>
+    <h1>
+        Anurag Kolluru
+    </h1>
+    <h6>
+        Chicago
+    </h6>
+    <p>
+        Chicago is one of the happening cities in USA. It is located in Illinois state. It has many tourist spots, some of them are <b>Skydeck</b>, <b>Michigan Lake</b> and <b>River walk</b>. I like this place because of its beautiful downtown.
+    </p>
 </body>
 
 </html>
