--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         Chicago
     </h6>
     <p>
-        Chicago is one of the happening cities in USA. It is located in Illinois state. It has many tourist spots, some of them are <b>Skydeck</b>, <b>Michigan Lake</b> and <b>River walk</b>. I like this place because of its beautiful downtown.
+        Chicago is one of the happening cities in USA. It is located in Illinois state. 
+        It has many tourist spots, some of them are <b>Skydeck</b>, <b>Michigan Lake</b> and <b>River walk</b>.
+        I like this place because of its beautiful downtown.
     </p>
 </body>
 
