--- a/index.html
+++ b/index.html
@@ -19,6 +19,33 @@
         It has many tourist spots, some of them are <b>Skydeck</b>, <b>Michigan Lake</b> and <b>River walk</b>.
         I like this place because of its beautiful downtown.
     </p>
+    
+    <hr>
+
+    <h3>
+        Navigation From Maryville To Chicago 
+   </h3>
+   <ol>
+       <li>
+           First start from maryville to St.Joseph
+       </li>
+       <li>
+           From St.Joseph go to Kansas airport
+       </li>
+       <li>
+           Catch a flight from there to Chicago ORD airport 
+       </li>
+       <ol>
+           <li>
+               complete the boarding procedure
+           </li>
+       </ol>
+       <li>
+           Finally you'll reach Chicago in 2 hours from Kansas city
+       </li>
+   </ol>
+
+
 </body>
 
 </html>
