--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        <li>
            Catch a flight from there to Chicago ORD airport 
        </li>
-       <ol>
+       <ol type="i"> 
            <li>
                complete the boarding procedure
            </li>
@@ -44,6 +44,25 @@
            Finally you'll reach Chicago in 2 hours from Kansas city
        </li>
    </ol>
+
+   <h3>
+       Items To Carry To Our Favourite place
+   </h3>
+
+   <ul>
+       <li>
+           Camera
+       </li>
+       <li>
+           Phone
+       </li>
+       <li>
+           Power bank
+       </li>
+       <li>
+           Flip flops
+       </li>
+   </ul>
 
 
 </body>
