--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
             <p>
                 Money Man can be everyone's favourite super hero because he always have money in the bank. 
                 He wears clothes made up of money which includes dollar bills and coin chains.
-                His super super power is maintaining infinite balance in his account.
+                His super power is maintaining infinite balance in his account.
                 
             </p>
             <br>
