--- a/index.html
+++ b/index.html
@@ -67,8 +67,73 @@
    <hr>
 
    <h3>
-
+       My Food/Breverages Recomendations
    </h3>
+
+   <p>
+       Bellow listed items are my all time favourite options 
+   </p>
+   <br>
+   <table style="width: 20%;">
+    <tbody>
+        <tr>
+            <th>
+                Item
+            </th>
+            <th>
+                Location
+            </th>
+            <th>
+                Price
+            </th>
+        </tr>
+        <tr>
+            <td>
+                Mc Flurry
+            </td>
+            <td>
+                Mc Donalds
+            </td>
+            <td>
+                8$
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Crispy Chicken
+            </td>
+            <td>
+                KFC
+            </td>
+            <td>
+                10$
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Singapoori Noodles
+            </td>
+            <td>
+                Seseme street
+            </td>
+            <td>
+                16$
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Masala Poori
+            </td>
+            <td>
+                Gopalji's House
+            </td>
+            <td>
+                13$
+            </td>
+        </tr>
+
+    </tbody>
+   </table>
 
 
 </body>
