--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
        Bellow listed items are my all time favourite options 
    </p>
    <br>
-   <table style="width: 20%;">
+   <table style="width: 20%">
     <tbody>
         <tr>
             <th>
