--- a/index.html
+++ b/index.html
@@ -74,65 +74,38 @@
        Bellow listed items are my all time favourite options 
    </p>
    <br>
-   <table style="width: 20%">
-    <tbody>
+
+   <table>
+       <thead>
         <tr>
-            <th>
-                Item
-            </th>
-            <th>
-                Location
-            </th>
-            <th>
-                Price
-            </th>
+            <th> Item</th>
+            <th> Location</th>
+            <th> Price</th>
+        </tr>
+        </thead> 
+        <tbody>
+        <tr>
+            <td> Mc Flurry</td>
+            <td> Mc Donalds </td>
+            <td> 8$</td>
         </tr>
         <tr>
-            <td>
-                Mc Flurry
-            </td>
-            <td>
-                Mc Donalds
-            </td>
-            <td>
-                8$
-            </td>
+            <td> Crispy Chicken</td>
+            <td> KFC</td>
+            <td> 10$</td>
         </tr>
         <tr>
-            <td>
-                Crispy Chicken
-            </td>
-            <td>
-                KFC
-            </td>
-            <td>
-                10$
-            </td>
+            <td> Singapoori Noodles</td>
+            <td> Seseme street</td>
+            <td>16$</td>
         </tr>
         <tr>
-            <td>
-                Singapoori Noodles
-            </td>
-            <td>
-                Seseme street
-            </td>
-            <td>
-                16$
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Masala Poori
-            </td>
-            <td>
-                Gopalji's House
-            </td>
-            <td>
-                13$
-            </td>
+            <td> Masala Poori</td>
+            <td> Gopalji's House</td>
+            <td> 13$</td>
         </tr>
 
-    </tbody>
+        </tbody>
    </table>
 
 
