--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
    </p>
    <br>
 
-   <table>
+   <table style="margin: 20%">
        <thead>
         <tr>
             <th> Item</th>
@@ -104,7 +104,6 @@
             <td> Gopalji's House</td>
             <td> 13$</td>
         </tr>
-
         </tbody>
    </table>
 
