--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
    </p>
    <br>
 
-   <table style="margin: 20%">
+   <table style="width:20%">
        <thead>
         <tr>
             <th> Item</th>
