--- a/index.html
+++ b/index.html
@@ -106,7 +106,77 @@
         </tr>
         </tbody>
    </table>
+<br>
+<hr>
+<br>
 
+
+<h3>Strong Orientation Algorithm</h3>
+<blockquote>
+    Strong orientations have been applied to the design of one-way road networks. According to Robbins' theorem, the graphs with strong orientations are exactly the bridgeless graphs. 
+    Eulerian orientations and well-balanced orientations provide important special cases of strong orientations; in turn, strong orientations may be generalized to totally cyclic orientations of disconnected graphs. 
+    The set of strong orientations of a graph forms a partial cube, with adjacent orientations in this structure differing in the orientation of a single edge. It is possible to find a single orientation in linear time, but it is #P-complete to count the number of strong orientations of a given graph.
+</blockquote>
+<a href="https://en.wikipedia.org/wiki/Strong_orientation">Source Link</a>
+<br>
+<pre>
+    vector<vector<pair<int, int>>> adj; // adjacency list - vertex and edge pairs
+vector<pair<int, int>> edges;
+
+vector<int> tin, low;
+int bridge_cnt;
+string orient;
+vector<bool> edge_used;
+void find_bridges(int v) {
+    static int time = 0;
+    low[v] = tin[v] = time++;
+    for (auto p : adj[v]) {
+        if (edge_used[p.second]) continue;
+        edge_used[p.second] = true;
+        orient[p.second] = v == edges[p.second].first ? '>' : '<';
+        int nv = p.first;
+        if (tin[nv] == -1) { // if nv is not visited yet
+            find_bridges(nv);
+            low[v] = min(low[v], low[nv]);
+            if (low[nv] > tin[v]) {
+                // a bridge between v and nv
+                bridge_cnt++;
+            }
+        } else {
+            low[v] = min(low[v], low[nv]);
+        }
+    }
+}
+
+int main() {
+    int n, m;
+    scanf("%d %d", &n, &m);
+    adj.resize(n);
+    tin.resize(n, -1);
+    low.resize(n, -1);
+    orient.resize(m);
+    edges.resize(m);
+    edge_used.resize(m);
+    for (int i = 0; i < m; i++) {
+        int a, b;
+        scanf("%d %d", &a, &b);
+        a--; b--;
+        adj[a].push_back({b, i});
+        adj[b].push_back({a, i});
+        edges[i] = {a, b};
+    }
+    int comp_cnt = 0;
+    for (int v = 0; v < n; v++) {
+        if (tin[v] == -1) {
+            comp_cnt++;
+            find_bridges(v);
+        }
+    }
+    printf("%d\n%s\n", comp_cnt + bridge_cnt, orient.c_str());
+}
+</pre>
+<a href="https://cp-algorithms.com/graph/strong-orientation.html">Source Link</a>
+<hr>
 
 </body>
 
