--- a/aboutme.html
+++ b/aboutme.html
@@ -10,9 +10,9 @@
             </h1>
             
             <p>
-                Money Man can be everyone's favourite super hero because he always have money in the bank. 
+                Money Man can be everyone's favourite super hero because he always have money in his bank. 
                 He wears clothes made up of money which includes dollar bills and coin chains.
-                His super power is maintaining infinite balance in his account.
+                His super powers are releasing dollar bills from his mouth and maintaining infinite balance in his account.
                 
             </p>
             <br>
